# pxrd-cell-indexer

./: .gitignore  AGENT.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: benchmark3500_a2_h1_jointphys.yaml  benchmark3500_a2_h2_stricthinge.yaml  benchmark3500_a2_hs1_cubicexact.yaml  benchmark3500_a2_hs2_angleprior.yaml  benchmark3500_a2_p1_logfourier.yaml  benchmark3500_a2_p2_loglinfourier.yaml  benchmark3500_a2_p3_attnpool.yaml  benchmark3500_a2_t1_t20_pos.yaml  benchmark3500_a2_t2_t20_posi.yaml  benchmark3500_a2_t3_t48_geom.yaml  benchmark3500_r10_niggli_h1.yaml  benchmark3500_r10_niggli_h2.yaml  benchmark3500_r10_niggli_h3.yaml  benchmark3500_r11b_e1a_enc4x1024.yaml  benchmark3500_r11b_e1b_enc8x1024.yaml  benchmark3500_r11b_e1c_ceil_u1.yaml  benchmark3500_r11b_e1c_ceil_u2.yaml  benchmark3500_r11b_e1c_ceil_u3.yaml  benchmark3500_r11b_e1c_e3_fusion.yaml  benchmark3500_r11b_e1c_enc8x2048.yaml  benchmark3500_r11b_e2_feat_enc4x1024.yaml  benchmark3500_r11b_e2c_feat_enc8x2048.yaml  benchmark3500_r11b_e3_spectrum_fusion.yaml  benchmark3500_r11b_e3_spectrum_only.yaml  benchmark3500_r9_niggli_h0.yaml  benchmark3500_r9_primitive_h0.yaml  diag_overfit_continuous.yaml  diag_overfit_discrete.yaml  diag_overfit_hist_mlp.yaml  diag_overfit_phys_continuous_2theta_i.yaml  diag_overfit_phys_inverse_d2_i.yaml  diag_overfit_phys_inverse_d2_only.yaml  diag_overfit_phys_reciprocal_d_i.yaml  overfit700_a2_peak_transformer_t3.yaml  overfit700_a2p5_b1a_rel_scalar.yaml  overfit700_a2p5_b1b_rel_mlp.yaml  overfit700_a3_g1_gstar6.yaml  overfit700_a3_g2_decoded_cell.yaml  (+103 more)
(+361 files in other folders)
